--- a/src/components/users/users.module.css
+++ b/src/components/users/users.module.css
@@ -1,5 +1,9 @@
 .photo {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
+}
+
+.currentPage {
+  font-weight: 600;
 }
